--- a/environment/src/main/webapp/WEB-INF/web.xml
+++ b/environment/src/main/webapp/WEB-INF/web.xml
@@ -1,15 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-   <listener>     
+   <listener>      
   	<listener-class>jdbc.DBCPInitListener</listener-class>
   </listener>
-   
+   <!-- <context-param>
+ 	<param-name>poolConfig</param-name>
+ 	<param-value>
+ 		jdbcdriver=org.mariadb.jdbc.Driver
+ 		jdbcUrl=jdbc:mariadb://localhost/environment
+ 		dbUser=root
+ 		dbPass=Xorjsals12
+ 		poolName=environment
+ 		vaildationQuery=select 1
+ 		minIdle=4
+ 		maxTotal=50
+ 	</param-value>
+  </context-param> -->
   <!-- 데이터베이스 연결  -->  
   <context-param>
  	<param-name>poolConfig</param-name>
  	<param-value>
  		jdbcdriver=org.mariadb.jdbc.Driver
- 		jdbcUrl=jdbc:mariadb://192.168.219.103:3306/environment
+ 		jdbcUrl=jdbc:mariadb://192.168.40.26:3306/environment
  		dbUser=taewoo
  		dbPass=1234
  		poolName=environment
