git commit test

--- a/environment/.settings/org.eclipse.core.resources.prefs
+++ b/environment/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/main/java/jdbc/DBCPInitListener.java=UTF-8
+encoding//src/main/webapp/DIP_Notice/Notice=UTF-8
 encoding//src/main/webapp/tableInfo/environmentDB.sql=UTF-8
